--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <main>
         <section class="intro">
         <h4> Hi  I'm  <h1>AllAN MWANGI</h1>  </h4>   
-          <h3>Junior Front end developer</h3>
+          <h3> Frontend/Backend  Python Developer</h3>
           <img src="passport allan.jpg" alt=""> <br> </section> <br>
           <br><h4><em>Who am i?</em></h4>
 
@@ -73,7 +73,7 @@
                           <li> Html</li>
                                 </ol> 
                         <p> I have done to-dolist for my react project enhancing also my git skills <br>
-                             Portfolio website – A personal site that showcases your skills  which supports every work  <br>
+                             Portfolio website – A personal site that showcases your skills  which supports every work i do.  <br>
                              E-commerce site – A small product-based e-commerce site with features like product lists, a shopping cart, and checkout making oustanding skills.
                                              <br> Having this skills equips me to understand user logins and working with APIs and creditials which are crucial 
 
