--- a/index.html
+++ b/index.html
@@ -66,12 +66,18 @@
           <section class="pro">
             <div class="projects" id="projects">
             <h3>SKILLS</h3>
-             <h2><b>Front-end skills  </b> </h2>
+             <h2><b>Front-end  / Backend skills  </b> </h2>
                     <ol><li> Javascript</li>
                         <li> React</li>
                           <li>CSS</li>       
-                          <li> Html</li>
-                                </ol> 
+                          <li> Html</li> <br>
+                          <li> Python </li>
+                          <li>Nodejs / express</li>
+                         <li> Sql</li>
+                         <li> Deployement Capabilities and Working with CMS </li>
+
+                      
+ </ol> 
                         <p> I have done to-dolist for my react project enhancing also my git skills <br>
                              Portfolio website – A personal site that showcases your skills  which supports every work i do.  <br>
                              E-commerce site – A small product-based e-commerce site with features like product lists, a shopping cart, and checkout making oustanding skills.
