--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
         </header>
       <main>
         <section class="intro">
-        <h4> Hi  I'm  <h1>AllAN MWANGI</h1>  </h4>   
+        <h4> Hi, I'm  <h1>AllAN MWANGI</h1>  </h4>   
           <h3> Frontend/Backend  Python Developer</h3>
           <img src="passport allan.jpg" alt=""> <br> </section> <br>
           <br><h4><em>Who am i?</em></h4>
 
           <div class="about" id="about">
-            <p> Hi I am Allan Kaigi a passionate upcoming full stack software developer with a strong  intrest  
-              in technology especially ai. I am a certified front end developer from IBM cousera. I have a strong 
+            <p> Hi,I am Allan Kaigi a passionate aspiring full stack software developer with a strong  intrest  
+              in technologies specifically  Data Science and Machine Learning . I am a certified frontend developer from IBM cousera. I have a strong 
               background in programming as i did python and Sql from kaggle later on enrolled for my certificate 
               at IBM where i speacialized in some languages.Javascript,HTML-5, React library.
-              I did cloud computing and containers also which enhanced my backend which strength
+              I did cloud computing and intro to cloud security also which enhanced my backend which strength
               <br>
               <br>
                 I having this skills made me be able learn about teamwork and keeping ahead with others on latest technology
@@ -66,7 +66,7 @@
           <section class="pro">
             <div class="projects" id="projects">
             <h3>SKILLS</h3>
-             <h2><b>Front-end  / Backend skills  </b> </h2>
+             <h2><b>Frontend / Backend skills  </b> </h2>
                     <ul><li> Javascript</li>
                         <li> React</li>
                           <li>CSS</li>       
