--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               in technologies specifically  Data Science and Machine Learning . I am a certified frontend developer from IBM cousera. I have a strong 
               background in programming as i did python and Sql from kaggle later on enrolled for my certificate 
               at IBM where i speacialized in some languages.Javascript,HTML-5, React library.
-              I did cloud computing and intro to cloud security also which enhanced my backend which strength
+              I did cloud computing and intro to cloud security which enchanced my frontend development.
               <br>
               <br>
                 I having this skills made me be able learn about teamwork and keeping ahead with others on latest technology
